force-app/main/default/objects/Position__c/fields/CLIN__c.field-meta.xml
<CustomField>
    <fullName>CLIN__c</fullName>
    <description>CLIN number</description>
    <inlineHelpText>CLIN number</inlineHelpText>
    <label>CLIN</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>