force-app/main/default/objects/Position__c/fields/Hiring_Status__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Status__c</fullName>
    <label>Hiring Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Start Date</fullName>
            </value>
            <value>
                <fullName>In Negotiation</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>