force-app/main/default/objects/Position__c/fields/Labor_Rates__c.field-meta.xml
<CustomField>
    <fullName>Labor_Rates__c</fullName>
    <description>Labor Rate Based on CLIN and T4-NG LCAT</description>
    <inlineHelpText>Labor Rate Based on CLIN and T4-NG LCAT</inlineHelpText>
    <label>Labor Rates</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CLIN__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.00</fullName>
                <default>true</default>
                <label>0.00</label>
            </value>
            <value>
                <fullName>52.82</fullName>
            </value>
            <value>
                <fullName>63.79</fullName>
            </value>
            <value>
                <fullName>68.00</fullName>
            </value>
            <value>
                <fullName>77.04</fullName>
            </value>
            <value>
                <fullName>107.16</fullName>
            </value>
            <value>
                <fullName>134.09</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>