force-app/main/default/objects/Position__c/fields/PMSS_ID__c.field-meta.xml
<CustomField>
    <fullName>PMSS_ID__c</fullName>
    <description>Unique ID to identify each position</description>
    <inlineHelpText>Unique ID to identify each position</inlineHelpText>
    <label>PMSS ID</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>