force-app/main/default/objects/Position__c/fields/Position_Category__c.field-meta.xml
<CustomField>
    <fullName>Position_Category__c</fullName>
    <label>Position Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backfill - addition to FY18</fullName>
                <label>Backfill - Addition to FY18</label>
            </value>
            <value>
                <fullName>Backfill - existing staff FY17</fullName>
                <label>Backfill - Existing staff FY17</label>
            </value>
            <value>
                <fullName>Backfill - existing staff FY18</fullName>
                <label>Backfill - Existing staff FY18</label>
            </value>
            <value>
                <fullName>Existing staff FY17</fullName>
            </value>
            <value>
                <fullName>Internal Transfer</fullName>
            </value>
            <value>
                <fullName>New Hire - Addition FY17</fullName>
                <label>New hire - Addition FY17</label>
            </value>
            <value>
                <fullName>New Hire - Addition FY18</fullName>
            </value>
            <value>
                <fullName>Existing Staff - Addition FY18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>