force-app/main/default/objects/Position__c/fields/Position_Status__c.field-meta.xml
<CustomField>
    <fullName>Position_Status__c</fullName>
    <label>Position Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>