force-app/main/default/objects/Position__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who will be filling this position?</description>
    <inlineHelpText>Who will be filling this position?</inlineHelpText>
    <label>Staff</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>