force-app/main/default/objects/Position__c/fields/T4_NG_LCAT__c.field-meta.xml
<CustomField>
    <fullName>T4_NG_LCAT__c</fullName>
    <description>Position Title T4_NG LCAT</description>
    <inlineHelpText>Position Title</inlineHelpText>
    <label>T4-NG LCAT</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Labor_Rates__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Analyst Senior</fullName>
            </value>
            <value>
                <fullName>Configuration Manager</fullName>
            </value>
            <value>
                <fullName>Configuration Manager Senior</fullName>
            </value>
            <value>
                <fullName>Functional Analyst</fullName>
            </value>
            <value>
                <fullName>Functional Analyst Senior</fullName>
            </value>
            <value>
                <fullName>Functional Area Analyst</fullName>
            </value>
            <value>
                <fullName>Functional Area Analyst Senior</fullName>
            </value>
            <value>
                <fullName>Functional Area Expert I</fullName>
            </value>
            <value>
                <fullName>Functional Area Expert II</fullName>
            </value>
            <value>
                <fullName>Integrated Schedule Analyst Senior</fullName>
            </value>
            <value>
                <fullName>Program Analyst Senior</fullName>
            </value>
            <value>
                <fullName>Project Director</fullName>
            </value>
            <value>
                <fullName>QA Manager</fullName>
            </value>
            <value>
                <fullName>System Engineer Senior</fullName>
            </value>
            <value>
                <fullName>Test Engineer Senior</fullName>
            </value>
            <value>
                <fullName>Trainer Senior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>